# internal/routes/api/v1/v1.go
@@ -1,9 +1,11 @@
 package v1
 
 import (
+	"test_task/internal/routes/api/v1/users"
+
 	"github.com/gofiber/fiber/v2"
 )
 
 func InitRoutes(router fiber.Router) {
-
+	users.InitRoutes(router.Group("/users"))
 }
